# verovio

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .serve  .travis.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CNAME  Dockerfile  LICENSE.txt  MANIFEST.in  Package.swift  README.md  Verovio.podspec  VerovioToolkit.podspec  _config.yml  _config_dev.yml  abc-examples.xhtml  app.html  app.xhtml  appveyor.yml  ci_build-toolkit.sh  ci_deploy-doxygen.sh  ci_deploy-toolkit.sh  ci_precache.sh  ci_push-changes.sh  codemeta.json  command-line.xhtml  comparison.xhtml  deploy-develop.sh  deploy-doxygen.sh  deploy-test.sh  deploy-toolkit-with-humdrum.sh  deploy-toolkit-without-humdrum-light.sh  deploy-toolkit-without-humdrum-wasm.sh  deploy-toolkit-without-humdrum.sh  doc.html  (+62 more)
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml
Verovio.xcodeproj/: project.pbxproj  project.pbxproj.orig
_data/: mei-tests.yml  musicxml-tests.yml
_includes/: app-code.html  cli.txt  doc.html  header.html  how-sidebar.html  html-tutorial.html  mei-class.html  mei-excerpt.html  option-form.html  other-sidebar.html  pae-sidebar.html  smufl-sidebar.html  test-version.html  top-header.html  tutorial-sidebar.html
_layouts/: comparison.html  default.html  iaml19.html  verovio.html  viewer.html
_plugins/: mei_supported_to_liquid.rb
_posts/: 2014-01-29-welcome-to-jekyll.markdown  2017-05-15-version-1.0.0-released  2017-05-15-version-1.0.0-released.md  2017-05-19-bach-digitale.md  2017-06-13-version-1.1.0-released.md  2017-09-21-pdf-generation.md  2017-10-27-npmjs.md  2017-11-08-webassembly.md  2018-12-11-viewer.md  2019-01-21-version-2.0.0-released.md  2019-04-08-abc-input-support.md  2019-05-27-version-2.1.0-released.md  2019-10-17-version-2.2.0-released.md  2019-11-04-version-2.3.0-released.md  2020-03-11-version-2.6.0-released.md
_site/: features.xhtml
_tests/: test1.md  test2.md
cmake/: CMakeLists.txt
commandline/: main.cpp
css/: midiplayer.css  verovio-sidebar.scss  verovio.css  verovio.scss
demo/: dist  (+5 more)
fonts/: FONTLOG.txt  Leipzig-5.0.sfd  Leipzig-5.1.sfd  Leipzig-5.2.sfd  Leipzig-ttf.js  README.md  VerovioText-1.0.sfd  extract-bounding-boxes.py  extract-glyphs-all-fonts.xsl  extract-glyphs-verovio-text.xsl  extract-glyphs.py  extract-glyphs.xsl  generate-bbox.js  generate-cpp.py  generate-cpp.xsl  generate-h.py  generate-h.xsl  generate-smufl-code.py  generate.py  generate_all.sh  generate_ff.py  generate_ff.sh  generate_font_metadata.py  generate_plain_font_metadata.py  generate_plain_text.py  generate_text_font.sh  generate_woff.sh  generate_woff2.sh  leipzig_metadata.json  pyproject.toml  smufl.cpp.inc  smufl.h.inc  supported.xml  supported.xsl  vrv-ttf.js  woff-1.txt  woff-2.txt
fonts/Bravura/: bravura_metadata.json
fonts/Gootville/: gootville_metadata.json
fonts/Leipzig/: Leipzig-ttf.js  leipzig_metadata.json
fonts/Leland/: leland_metadata.json
fonts/json/: bravura_metadata.json  glyphnames.json  leipzig-5.2_metadata.json  leipzig_metadata.json  leland_metadata.json
fonts/old-code/: extract-bounding-boxes.py  generate-smufl-code.py  generate_woff2.sh
libmei/: AUTHORS  README.md  att_classes.h  attclasses.h  attconverter.cpp  attconverter.h  attmodule.cpp  atts_analysis.cpp  atts_analysis.h  atts_analytical.cpp  atts_analytical.h  atts_cmn.cpp  atts_cmn.h  atts_cmnornaments.cpp  atts_cmnornaments.h  atts_critapp.cpp  atts_critapp.h  atts_edittrans.cpp  atts_edittrans.h  atts_externalsymbols.cpp  atts_externalsymbols.h  atts_facsimile.cpp  atts_facsimile.h  atts_figtable.cpp  atts_figtable.h  atts_fingering.cpp  atts_fingering.h  atts_frettab.cpp  atts_frettab.h  atts_genetic.cpp  atts_genetic.h  atts_gestural.cpp  atts_gestural.h  atts_harmony.cpp  atts_harmony.h  atts_header.cpp  atts_header.h  atts_layout.cpp  atts_layout.h  atts_linkalign.cpp  (+34 more)
libmei/addons/: att.cpp  att.h  attalternates.h  attdef.h  element.h
libmei/mei/: mei-all_compiled.odd  mei-basic_compiled.odd  mei-verovio.xml  mei-verovio_compiled.odd
libmei/mei/develop/: mei-all_compiled.odd  mei-basic_compiled.odd  mei-verovio.xml  mei-verovio_compiled.odd
libmei/tools/: config.yml  cpp.py  datatypes.yml  generatecode.py  parseschema2.py  schema.py
tools/: .configure  CMakeLists.txt  Der_Kaefer_und_die_Blume.mei  Der_Kaefer_und_die_Blume.musicxml  JMB-Blut.mei  Makefile  c_wrapper.cpp  c_wrapper.h  clean.sh  create_ios_framework_headers.sh  get_git_commit.sh  get_version.sh  install_manifest.txt  layout.mei  main.cpp  mei4layout.mei  mei4layoutpagetest.mei  mei4page.mei  mergerest.mei  verovio
tools/android/: README.md
tools/android/jni/: Android.mk  Application.mk
tuning-library/: .gitignore  CMakeLists.txt  README.md
tuning-library/.github/workflows/: build-pr.yml  code-checks.yml
tuning-library/commands/: parsecheck.cpp  showmapping.cpp
tuning-library/include/: Tunings.h  TuningsImpl.h
tuning-library/scripts/: release-notes.sh
tuning-library/tests/: alltests.cpp  symbolcheck1.cpp  symbolcheck2.cpp
tuning-library/tests/data/: 12-ET-P5.scl  12-intune-dosle.scl  12-intune-nodesc.scl  128.kbm  31-edo.ascl  31-edo.kbm  31edo_dos_lineends.scl  31edo_meantone.kbm  carlos-alpha.scl  empty-note69-dosle.kbm  liwung-tbn.ascl  liwung-tbn.kbm  mapping-a442-7-to-12.kbm  mapping-allkeys-from-59-a440.kbm  mapping-n60-250.kbm  mapping-n60-fifths.kbm  mapping-whitekeys-c261.kbm  mapping-whitekeys-from-48-a440.kbm  mapping-whitekeys-from-59-a440.kbm  mapping-whitekeysalt-from-59-a440.kbm  maqamat.ascl  maqamat.kbm  piano.kbm  rast.ascl  rast.kbm  rast6.ascl
tuning-library/tests/data/bad/: bad-rast.ascl  badnote.scl  blank-line.kbm  blanknote.scl  empty-bad.kbm  empty-extra.kbm  extraline-long.kbm  extraline.scl  garbage-key.kbm  missing-note.kbm  missingnote.scl
tuning-library/tests/data/kbm-fix-012023/: ed4-4.scl  eightnote-c-100.kbm  empty-c-100.kbm  exact4.scl  fournote-c-100.kbm  sixnote-c-100.kbm  threenote-c-100-from-1.kbm  threenote-c-100.kbm  twelve-c-100.kbm
tuning-library/tests/data/kbm-wrapping-7822/: 31edo2-subset-57.kbm  31edo2-subset.kbm  31edo2.scl
(+7613 files in other folders)
