[tool.poetry]
name = "verovio-fonts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
svgpathtools = "^1.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"
black = "^24.3.0"
mypy = "^0.971"
pylint = "^2.15.3"

[tool.black]
line-length = 99

[tool.pylint]
max-line-length = 99
disable = ["C0103", "W1514", "C0114", "R0914", "R0913"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
