[project]
name = "Verovio-fonts"
version = "0.1.0"
dependencies = [
    "svgpathtools (>=1.7.0)",
]
requires-python = ">=3.9"
description = ""
authors = [
    {name = "Andrew Hankinson", email="andrew.hankinson@gmail.com"},
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"
black = "^24.3.0"
mypy = "^0.971"
pylint = "^2.15.3"

[tool.black]
line-length = 99

[tool.pylint]
max-line-length = 99
disable = ["C0103", "W1514", "C0114", "R0914", "R0913"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
